<?xml version="1.0"?>
<package format="2">
  <name>my_class_pkg</name>
  <version>0.0.0</version>
  <description>The my_class_pkg package</description>

  <maintainer email="bcsh@todo.todo">bcsh</maintainer>
  <license>TODO</license>

  <!-- 编译依赖：包含消息/服务/动作的所有依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <depend>upros_message</depend>


  <!-- 运行依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
